kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress
  annotations:
    kompose.cmd: kompose convert -o kompose/
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose/
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: wordpress
            - name: MYSQL_PASSWORD
              #value: ddyXnZymPNFGu9
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: password
            - name: MYSQL_ROOT_PASSWORD
              #value: I1kO7Kh920FqTQivyjt7vQ==
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: root_password
            - name: MYSQL_USER
              value: wordpress
          image: docker.io/mysql/mysql-server:8.0
          name: mysql-server
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
