kubernetes/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress
  annotations:
    kompose.cmd: kompose convert -o kompose/
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose/
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: wordpress
    spec:
      containers:
        - env:
            - name: WORDPRESS_DB_HOST
              value: db
            - name: WORDPRESS_DB_NAME
              value: wordpress
            - name: WORDPRESS_DB_PASSWORD
              #value: ddyXnZymPNFGu9
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: password
            - name: MYSQL_ROOT_PASSWORD
            - name: WORDPRESS_DB_USER
              value: wordpress
          image: docker.io/wordpress
          name: wordpress
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: wordpress-data
      restartPolicy: Always
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-data
status: {}
