kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  annotations:
    kompose.cmd: kompose convert -o kompose/
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
