kubernetes/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  annotations:
    kompose.cmd: kompose convert -o kompose/
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: wordpress
status:
  loadBalancer: {}
